devices spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -576,4 +576,5 @@ button:hover {
   font-weight: 400;
   font-size: 1.563rem;
   margin: 2.5rem 0px 1.875rem;
+  padding: 0 1rem;
 }
